--- a/Hospital/pom.xml
+++ b/Hospital/pom.xml
@@ -25,12 +25,24 @@
       </plugin>
     </plugins>
   </build>
-       <dependencies>
-       <dependency>
- <groupId>com.sun.jersey</groupId>
-	<artifactId>jersey-bundle</artifactId>
-	<version>1.19.4</version>
+        <dependencies>
+  <dependency>
+    <groupId>javax</groupId>
+    <artifactId>javaee-api</artifactId>
+    <version>7.0</version>
+    <scope>provided</scope>
+</dependency>
+  
+   <dependency>
+		 <groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-bundle</artifactId>
+			<version>1.19.4</version>
  </dependency>
+ <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
  <dependency>
 	<groupId>com.sun.jersey</groupId>
 	<artifactId>jersey-core</artifactId>
