--- a/Hospital/pom.xml
+++ b/Hospital/pom.xml
@@ -26,23 +26,13 @@
     </plugins>
   </build>
         <dependencies>
-  <dependency>
-    <groupId>javax</groupId>
-    <artifactId>javaee-api</artifactId>
-    <version>7.0</version>
-    <scope>provided</scope>
-</dependency>
-  
+        
+        
    <dependency>
-		 <groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-bundle</artifactId>
-			<version>1.19.4</version>
+ <groupId>com.sun.jersey</groupId>
+	<artifactId>jersey-bundle</artifactId>
+	<version>1.19.4</version>
  </dependency>
- <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.7.0</version>
-        </dependency>
  <dependency>
 	<groupId>com.sun.jersey</groupId>
 	<artifactId>jersey-core</artifactId>
@@ -68,5 +58,36 @@
 		<artifactId>jsoup</artifactId>
 		<version>1.8.1</version>
    </dependency>
+   
+<!--    500 error occuring dependencies start-->
+
+    <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+		<dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+		<dependency>
+	    <groupId>org.glassfish.jersey.core</groupId>
+	    <artifactId>jersey-server</artifactId>
+	    <version>2.17</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.glassfish.jersey.containers</groupId>
+	    <artifactId>jersey-container-servlet-core</artifactId>
+	    <version>2.17</version>
+	</dependency>
+   
+   <!--    500 error occuring dependencies end -->
+   
+   
+   
+   
+   
        </dependencies>
      </project>
