--- a/Hospital/pom.xml
+++ b/Hospital/pom.xml
@@ -10,6 +10,7 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
+        
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -23,6 +24,14 @@
       <warSourceDirectory>WebContent</warSourceDirectory>
       </configuration>
       </plugin>
+      <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+  <configuration>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+  </configuration>
+</plugin>
     </plugins>
   </build>
         <dependencies>
@@ -82,6 +91,12 @@
 	    <artifactId>jersey-container-servlet-core</artifactId>
 	    <version>2.17</version>
 	</dependency>
+	<dependency>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.7.0</version>
+</dependency>
+
    
    <!--    500 error occuring dependencies end -->
    
@@ -90,4 +105,7 @@
    
    
        </dependencies>
+       
+       
+       
      </project>
