--- a/Doctor/pom.xml
+++ b/Doctor/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.healthcare.doctor.api</groupId>
-    <artifactId>doctor-api</artifactId>
+    <groupId>Doctor</groupId>
+    <artifactId>Doctor</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <repositories>
